利用規約の読み込みと表示4(Android)

--- a/androidApp/src/main/res/values/ToS.xml
+++ b/androidApp/src/main/res/values/ToS.xml
@@ -119,6 +119,6 @@ X:@CistusSystem\n
 ||当アプリの「お問い合わせ」ページにあるフォームからもお問い合わせいただけます。必要事項を入力し、送信ボタンをクリックしてください。\n
 |3|Xでのお問い合わせ\n
 ||本アプリの制作者に対してXのダイレクトメッセージからもお問い合わせいただけます。\n
-||@CistusSystem\n
+||@CistusSystem
 </string>
 </resources>
